bk_ida/gccida/c0/gen_split_1157
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1157/src/insn-emit.c:14307:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)( unsigned __int16)*( _DWORD *)*operands, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1157/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1157/src/insn-emit.c:14307:14: error: expected expression
( rtx_code)( unsigned __int16)*( _DWORD *)*operands, 
             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_split_1157/src/obj/insn-emit.o] Error 1
